test/kuard-test-ingress.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kuard
  namespace: kuard
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kuard
  namespace: kuard
  labels:
    app: kuard
spec:
  replicas: 3
  selector:
    matchLabels:
      app: kuard
  template:
    metadata:
      labels:
        app: kuard
    spec:
      containers:
      - image: gcr.io/kuar-demo/kuard-amd64:1
        name: kuard
---
apiVersion: v1
kind: Service
metadata:
  name: kuard
  namespace: kuard
  labels:
    app: kuard
  annotations:
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: kuard
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: kuard
  namespace: kuard
  labels:
    app: kuard
  annotations:
    kubernetes.io/ingress.class: "nginx"
    external-dns.alpha.kubernetes.io/hostname: "kuard.dev.mycompany.com."
    external-dns.alpha.kubernetes.io/ttl: "300"
spec:
  rules:
    - host: kuard.dev.mycompany.com
      http:
        paths:
          - path: /
            backend:
              serviceName: kuard
              servicePort: 80
